# jsmn-cmake

./: CMakeLists.txt  README.md  simple.c
cmake/: jsmn.cmake
test_data/: simple.json
